@@ -1,6 +1,10 @@
 2003-10-29 Miguel Guzman <aglanor [at] telefonica [dot] net>
 	* src/services/components/ogre/: DimeOgre.(h|cpp):
 	Added ConsoleObject inheritance, it runs the Quit command.
+	* configure.ac, src/main/Application.cpp and some Makefile.am's:
+	Removed DataModel inclusion.
+	Commented out boost check while configuring: it's not needed
+	at this time. One less dependancy!
 
 2003-10-27 Miguel Guzman <aglanor [at] telefonica [dot] net>
         * src/services/components/ogre/: Console.cpp, InputManager.cpp:
